tests/compilation_tests/export_functions/inner_vec_refs.stderr
error: a vector type in output types of export functions shouldn't contain references
 --> $DIR/inner_vec_refs.rs:8:54
  |
8 | pub fn inner_arrays_2(_arg: &Vec<Vec<Vec<Vec<u8>>>>) -> &Vec<Vec<&Vec<Vec<u8>>>> {
  |                                                      ^

error: a vector type in output types of export functions shouldn't contain references
  --> $DIR/inner_vec_refs.rs:13:54
   |
13 | pub fn inner_arrays_3(_arg: &Vec<Vec<Vec<Vec<u8>>>>) -> &Vec<&Vec<&Vec<&Vec<&u8>>>> {
   |                                                      ^
